--- a/public/notes.html
+++ b/public/notes.html
@@ -20,24 +20,24 @@
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
         <i class="fas fa-save text-light save-note"></i>
-        <i class="fas fa-save text-light new-note"></i>
+        <i class="fas fa-plus text-light new-note"></i>
       </div>
     </nav>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 list-container" id="list-container">
+        <div class="col-4 list-container">
           <div class="card">
-            <ul class="list-group" id="list-group"></ul>
+            <ul class="list-group"></ul>
           </div>
         </div>
         <div class="col-8">
-            <input
+          <input
             class="note-title"
             placeholder="Note Title"
             maxlength="28"
             type="text"
-            />
-            <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          />
+          <textarea class="note-textarea" placeholder="Note Text"></textarea>
         </div>
       </div>
     </div>
