--- a/public/notes.html
+++ b/public/notes.html
@@ -19,8 +19,10 @@
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <i class="fas fa-save text-light save-note"></i>
-        <i class="fas fa-plus text-light new-note"></i>
+        <i class="fa fa-floppy-o text-light save-note"></i>
+        <i class="fa fa-plus text-light new-note"></i>
+        <i class="fa fa-times text-light clear-button"></i>
+
       </div>
     </nav>
     <div class="container-fluid">
