--- a/public/notes.html
+++ b/public/notes.html
@@ -19,7 +19,7 @@
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <a><i class="fa fa-floppy-o text-light save-note"></i></a>
+        <i class="fa fa-floppy-o text-light save-note"></i>
         <i class="fa fa-plus text-light new-note"></i>
         <i class="fa-solid fa-x text-light clear-btn"></i>
 
