--- a/public/notes.html
+++ b/public/notes.html
@@ -19,10 +19,8 @@
     <nav class="navbar bg-info">
       <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
       <div class="icons">
-        <i class="fa fa-floppy-o text-light save-note"></i>
+        <i class="fa fa-save text-light save-note"></i>
         <i class="fa fa-plus text-light new-note"></i>
-        <i class="fa-solid fa-x text-light clear-btn"></i>
-
       </div>
     </nav>
     <div class="container-fluid">
